--- a/sourse/pug/blocks/sReviews/_sReviews.pug
+++ b/sourse/pug/blocks/sReviews/_sReviews.pug
@@ -15,7 +15,7 @@ mixin sReviews(data)
 										+img('img/sExpert-img.png').img
 										.text Дмитрий Корековцев<br>супервизор 2 поток
 								+e.col.col
-									+img('img/puzzles.png').puzzles
+									+img('img/puzzles-update.png').puzzles
 						+e.item.item_white.crop-text--js
 							p Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.
 							p Проект "Lion Craft" авторские изделия из натуральной кожи с целью запуска новой линейки продуктов shoper для женщин, которые все успевают и дома и на работе. Это прям про меня.
