--- a/sourse/pug/blocks/sReviews/_sReviews.scss
+++ b/sourse/pug/blocks/sReviews/_sReviews.scss
@@ -43,7 +43,7 @@
 			top: 0;
 			right: 0;
 			max-width: rem(380);
-			transform: translate(10%, -40%) rotate(170deg) scale(1, -1);
+			transform: translate(10%, -40%);
 			// z-index: 2;
 		}
 
