--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -2,13 +2,15 @@
 .headerBlock {
 	--sPT: #{rem(70)};
 	--sPB: #{rem(58)};
-	--sTPB: #{rem(86)}; 
-  background: $primary;
-  @include media-breakpoint-up(lg) {
-    --sPB: #{rem(62)};
-  }
-	
-	&__row{
+	--sTPB: #{rem(56)};
+	// z-index: 2;
+	// position: relative;
+	background: $primary;
+	@include media-breakpoint-up(lg) {
+		--sPB: #{rem(62)};
+	}
+
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		--bs-gutter-y: #{rem(30)};
 	}
@@ -16,205 +18,285 @@
 	.section-title {
 		color: $white;
 	}
-  .container {
-  }
-
-  h1 {
-    margin-bottom: rem(35);
-    position: relative;
-    display: inline-block;
-  }
-
-  .sub-text {
-    font-weight: 500;
-    font-size: rem(25);
-    max-width: rem(698);
-    line-height: 1.2;
-
-    span {
-      position: relative;
-      z-index: 1;
-      margin-right: rem(4);
-      &::before {
-        content: '';
-        position: absolute;
-        left: -8px;
-        top: -2px;
-        z-index: -1;
-        background: $green;
-        width: calc(100% + 16px);
-        height: 118%;
-        padding: rem(4) rem(8);
-        border-radius: rem(100);
-      }
-    }
-  }
-
-	&__col{
-
-    position: relative;
-    &:first-child {
-      @include media-breakpoint-up(lg) {
-        margin-left: rem(-10);
-        margin-right: rem(10);
-      }
-    }
+	.container {
+		position: relative;
+		z-index: 2;
 	}
 
-  // .drops {
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   z-index: 0;
-  //   transform: translate(-6%, -14%);
-  //   max-width: 120vw;
-  //   @include media-breakpoint-up(lg) {
-  //     max-width: 80vw;
-  //   }
-  // }
+	h1 {
+		margin-bottom: rem(35);
+		position: relative;
+		display: inline-block;
+	}
 
-  // .disks {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   z-index: 0;
-  //   transform: translate(-13%, -18%);
-  // }
+	.sub-text {
+		font-weight: 500;
+		font-size: rem(25);
+		max-width: rem(550);
+		// text-wrap: balance;
+		line-height: 1.2;
 
-  .puzzle-orange, .puzzles {
-    position: absolute;
-  }
+		span {
+			position: relative;
+			z-index: 1;
+			margin-right: rem(8);
+			color: $body-color;
+			&::before {
+				content: "";
+				position: absolute;
+				left: -8px;
+				top: -2px;
+				z-index: -1;
+				background: $green;
+				width: calc(100% + 16px);
+				height: 118%;
+				padding: rem(4) rem(8);
+				border-radius: rem(100);
 
-  .puzzle-orange {
-    top: 0;
-    left: 20%;
-    z-index: 1;
-    @include media-breakpoint-up(lg) {
-      top: 16px;
-      left: -12%;
-    }
-  }
+				/* Rectangle 3 */
 
-  .puzzles {
-    bottom: 42%;
-    right: -49%;
-    // z-index: 2;
-  }
+				background: #f1fc00;
+				border-radius: 100px;
+			}
+		}
+	}
 
-  // .coursor {
-  //   position: absolute;
-  //   top: 30%;
-  //   left: 101%;
-  //   max-width: rem(50);
-  //   @include media-breakpoint-up(sm) {
-  //     max-width: none;
-  //     left: 110%;
-  //   }
-  //   @include media-breakpoint-up(lg) {
-  //     top: 60%;
-  //   }
-  // }
+	&__col {
+		position: relative;
+		&:first-child {
+			@include media-breakpoint-up(lg) {
+				margin-left: rem(-10);
+				margin-right: rem(10);
+			}
+		}
+	}
 
-  p {
-    line-height: 1.2;
-    margin-bottom: rem(24);
-  }
+	// .drops {
+	//   position: absolute;
+	//   top: 0;
+	//   right: 0;
+	//   z-index: 0;
+	//   transform: translate(-6%, -14%);
+	//   max-width: 120vw;
+	//   @include media-breakpoint-up(lg) {
+	//     max-width: 80vw;
+	//   }
+	// }
 
-  &__block {
-    max-width: rem(760);
-  }
+	// .disks {
+	//   position: absolute;
+	//   top: 0;
+	//   left: 0;
+	//   z-index: 0;
+	//   transform: translate(-13%, -18%);
+	// }
+
+	.puzzle-orange,
+	.puzzles {
+		position: absolute;
+		z-index: -1;
+	}
+
+	.puzzle-orange {
+		top: 0;
+		left: 20%;
+		z-index: 1;
+		@include media-breakpoint-up(lg) {
+			top: 16px;
+			left: -12%;
+		}
+	}
+
+	.puzzles {
+		bottom: 42%;
+		right: -49%;
+		// z-index: 2;
+	}
+
+	// .coursor {
+	//   position: absolute;
+	//   top: 30%;
+	//   left: 101%;
+	//   max-width: rem(50);
+	//   @include media-breakpoint-up(sm) {
+	//     max-width: none;
+	//     left: 110%;
+	//   }
+	//   @include media-breakpoint-up(lg) {
+	//     top: 60%;
+	//   }
+	// }
+
+	p {
+		line-height: 1.2;
+		margin-bottom: rem(24);
+	}
+
+	&__block {
+		max-width: rem(760);
+	}
 	&__item {
-    z-index: 1;
-    position: relative;
+		z-index: 1;
+		position: relative;
+		max-width: 615px;
 
-      &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: calc(100% + 50px);
-        background: inherit;
-        z-index: -1;
-        border-radius: inherit;
-      }
-    padding: rem(29) rem(30);
-    border-radius: rem(30);
-    &:first-child {
-      font-weight: 700;
-      font-size: 18px;
-      color: $orange;
-      background: $white;
-    }
+		&::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: calc(100% + 50px);
+			background: inherit;
+			z-index: -1;
+			border-radius: inherit;
+		}
+		padding: rem(29) rem(30);
+		border-radius: rem(30);
+		// &:first-child {
+		// 	font-weight: 700;
+		// 	font-size: 18px;
+		// 	color: $orange;
+		// 	background: $white;
+		// }
 
-    &:nth-child(2) {
-      background: $orange;
-      color: $white;
-      &::after {
-        @include media-breakpoint-down(lg) {
-          background: transparent;
-        }
-      }
-
-    }
+		// &:nth-child(2) {
+		background: $orange;
+		color: $white;
+		li {
+			// padding-right: 10px;
+			margin-right: 10px;
+			list-style: none;
+			font-size: 17px;
+			font-weight: 500;
+			margin-bottom: 0.5rem;
+			&::before {
+				content: url(../img/svg/check.svg);
+				// display: block;
+				display: inline-block;
+				margin-right: 5px;
+				// margin-right: 10px;
+			}
+		}
+		&::after {
+			@include media-breakpoint-down(lg) {
+				background: transparent;
+			}
+		}
+		// }
 	}
 
-  &__img-wrap {
-    width: rem(607);
-    max-width: 100%;
-    border-radius: rem(45);
-    position: relative;
-    height: 100%;
-    z-index: 1;
-  }
+	&__img-wrap {
+		width: rem(607);
+		max-width: 100%;
+		border-radius: rem(45);
+		position: relative;
+		height: 100%;
+		z-index: 1;
+		@include media-breakpoint-up(xs) {
+			text-align: right;
+		}
+		text-align: center;
+		img {
+			margin-bottom: -80px;
+		}
+	}
 
-  .img {
-    max-width: 100%;
-    @include media-breakpoint-up(lg) {
-    max-width: 153%;
-    left: 0;
-    transform: translateX(-18%);
-    position: absolute;
-    bottom: -5px;
-    }
-  }
+	.img {
+		max-width: 100%;
+		@include media-breakpoint-up(lg) {
+			max-width: 153%;
+			left: 0;
+			transform: translateX(-18%);
+			position: absolute;
+			bottom: -5px;
+		}
+	}
 
-	@include media-breakpoint-up(xl) {}
+	.btn {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: rem(10);
+		width: rem(322);
+		max-width: 100%;
+		margin-top: rem(25);
+		font-weight: 600;
+		font-size: rem(18);
+		text-align: center;
+		color: $white;
+		padding-left: rem(80);
 
-	@include media-breakpoint-up(lg) {}
+		.icon-wrap {
+			flex-shrink: 0;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background: $white;
+			border-radius: 50%;
+			@include mt;
+			width: rem(40);
+			height: rem(40);
+		}
 
-	@include media-breakpoint-up(md) {}
+		.icon {
+			fill: #636363;
+			// @include media-breakpoint-down(md) {
+			font-size: rem(12);
+			// }
+		}
+	}
 
-	@include media-breakpoint-up(sm) {}
+	@include media-breakpoint-up(xl) {
+	}
 
-	@include media-breakpoint-up(xs) {}
+	@include media-breakpoint-up(lg) {
+	}
+
+	@include media-breakpoint-up(md) {
+	}
+
+	@include media-breakpoint-up(sm) {
+	}
+
+	@include media-breakpoint-up(xs) {
+	}
 
 	//
-	@include media-breakpoint-between(md, xl) {}
-
-
-	//
-	@include media-breakpoint-only(xs) {}
-
-	@include media-breakpoint-only(sm) {}
-
-	@include media-breakpoint-only(md) {}
-
-	@include media-breakpoint-only(lg) {}
-
-	@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-between(md, xl) {
+	}
 
 	//
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-only(xs) {
+	}
 
-	@include media-breakpoint-down(lg) {}
+	@include media-breakpoint-only(sm) {
+	}
 
-	@include media-breakpoint-down(md) {}
+	@include media-breakpoint-only(md) {
+	}
 
-	@include media-breakpoint-down(sm) {}
+	@include media-breakpoint-only(lg) {
+	}
 
-	@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-only(xl) {
+	}
 
+	//
+	@include media-breakpoint-down(xl) {
+	}
+
+	@include media-breakpoint-down(lg) {
+	}
+
+	@include media-breakpoint-down(md) {
+	}
+
+	@include media-breakpoint-down(sm) {
+	}
+
+	@include media-breakpoint-down(xs) {
+	}
 }
 
 // end.headerBlock
