--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -1,65 +1,62 @@
 .menu {
 	@include media-breakpoint-up(lg) {
-
 		display: flex;
 		text-align: center;
 		@include roww(20px);
 		flex-wrap: wrap;
-    
-    li {
-      // margin-left: 0;
-      margin-right: rem(12);
-      padding: 0;
-    }
 
-    a {
-      display: block;
-      padding: rem(7) rem(12);
-      min-width: rem(87);
-      background: $white;
-      color: $black;
-      border-radius: 59px;
-      font-size: rem(14);
-      font-weight: 500;
-      &:hover {
-        background: $purple-200;
-      }
-    }
+		li {
+			// margin-left: 0;
+			margin-right: rem(12);
+			padding: 0;
+		}
+
+		a {
+			display: block;
+			padding: rem(7) rem(12);
+			min-width: rem(87);
+			background: #efefef;
+			color: $black;
+			border-radius: 59px;
+			font-size: rem(14);
+			font-weight: 500;
+			&:hover {
+				background: $purple;
+				color: $white;
+			}
+		}
 	}
 
 	list-style: none;
 	position: relative;
 	margin-bottom: 0;
 	max-width: 100%;
-	li{
-		
+	li {
 		// margin-left: 0;
 		// margin-right: 0;
 		padding: 0;
 	}
-	a{
+	a {
 		display: block;
 		padding: rem(20) calc(var(--bs-gutter-x) / 2);
 	}
 }
 
-
-
 .toggle-menu-mobile {
 	--h: #{em(2)};
-	--color: #{$white};
+	--color: #{#000};
 	--position: calc(var(--h) * 2);
 	&.on span {
 		--color: transparent;
 	}
 
-	&.on  { 
-		--position: 0; 
+	&.on {
+		--position: 0;
 		--rotate: 45deg;
 	}
 	display: block;
-	height: calc(var(--h)* 12);
-	position: relative; 
+	height: calc(var(--h) * 12);
+	position: relative;
 	font-size: 32px;
 	width: 1em;
 	cursor: pointer;
@@ -68,20 +65,20 @@
 		content: "";
 		position: absolute;
 		left: 0;
-	} 
+	}
 	span {
 		@include a-cent(y);
 		display: block;
 	}
 
-	span:before { 
+	span:before {
 		top: var(--position);
-		transform: rotate3d(0,0,1, var(--rotate, 0));
+		transform: rotate3d(0, 0, 1, var(--rotate, 0));
 	}
 
 	span:after {
 		bottom: var(--position);
-		transform: rotate3d(0,0,1, calc(-1 * var(--rotate,0)));
+		transform: rotate3d(0, 0, 1, calc(-1 * var(--rotate, 0)));
 	}
 	span,
 	span:after,
@@ -91,14 +88,11 @@
 		height: var(--h);
 		background-color: var(--color);
 		transition: all 0.3s;
-		backface-visibility: hidden; 
+		backface-visibility: hidden;
 		transform-origin: 50% 50%;
-	} 
+	}
 }
 @include media-breakpoint-down(lg) {
-
-	
-
 	.menu-mobile {
 		position: fixed !important;
 		z-index: 999;
@@ -110,32 +104,32 @@
 		// left: 0;
 		right: 0;
 		background-color: $body-bg;
-		&:not(.active){
-			transform: translate3d(120%, 0,0);
+		&:not(.active) {
+			transform: translate3d(120%, 0, 0);
 			--opacity: 0;
-			.toggle-menu-mobile{
+			.toggle-menu-mobile {
 				opacity: 0;
 			}
 		}
-		@include mt(.6s);
+		@include mt(0.6s);
 		will-change: transform;
 
-		
-		.toggle-menu-mobile { 
+		.toggle-menu-mobile {
 			margin-left: -15%;
-			position: absolute; 
+			position: absolute;
 			left: 0;
 			right: auto;
-			color: #FFF;
+			color: #fff;
 			top: 10px;
-			z-index: 9999; 
+			z-index: 9999;
 			span:after,
 			span:before {
 				--color: #ffffff;
 			}
 		}
 		&__inner {
-			padding: calc(env(safe-area-inset-top, 0px) + #{rem(20)}) 0 calc(env(safe-area-inset-bottom, 0px) + #{rem(20)});
+			padding: calc(env(safe-area-inset-top, 0px) + #{rem(20)}) 0
+				calc(env(safe-area-inset-bottom, 0px) + #{rem(20)});
 			overflow-x: hidden;
 			overflow-y: auto;
 			-webkit-overflow-scrolling: touch;
@@ -145,12 +139,11 @@
 			// opacity: var(--opacity);
 		}
 
-		&.active { 
+		&.active {
 			.toggle-menu-mobile {
 				opacity: 1;
 			}
 		}
-
 
 		ul {
 			position: relative;
@@ -159,14 +152,13 @@
 		li {
 			display: block;
 			margin: 0;
-			border-top: 1px solid rgba(255, 255, 255, .13);
+			border-top: 1px solid rgba(255, 255, 255, 0.13);
 
 			a {
 				// font-size: 16px;
 
 				padding: 10px;
 				display: block;
-
 			}
 		}
 	}
