--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -2,57 +2,80 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	// position: relative;
+	// z-index: 2;
 	&__row {
-		--bs-gutter-x: #{rem(44)};
+		// --bs-gutter-x: #{rem(44)};
 		// @include media-breakpoint-up(md) {
-			--bs-gutter-y: var(--bs-gutter-x);
+		--bs-gutter-y: var(--bs-gutter-x);
+		// margin-bottom: 29px;
 		// }
 	}
-  
-  @include media-breakpoint-up(lg) {
-    margin-left: rem(-12);
-  }
+
+	@include media-breakpoint-up(lg) {
+		margin-left: rem(-12);
+	}
 
 	&__logo {
 		display: inline-block;
-    // max-width: 70%;
+		// max-width: 70%;
+		width: 100%;
+		max-width: 616px;
+		img {
+			width: 100%;
+		}
 	}
-  .z, .menu {
-    position: relative;
-    z-index: 4;
-  }
+	.z,
+	.menu {
+		position: relative;
+		z-index: 4;
+	}
 
 	padding-top: rem(67);
-  img {
-    width: rem(484);
-    max-width: 100%;
-  }
-	.section-title{
-		
+	img {
+		width: rem(484);
+		max-width: 100%;
 	}
-  &__col {
+	.section-title {
+	}
+	&__col {
 		@include media-breakpoint-down(lg) {
 			padding: 0;
 			margin: 0;
 		}
 	}
-	&__item{
-
+	&__item {
 	}
-	&__slide{
+	&__slide {
 		height: auto;
 	}
+	&__inner {
+		background-color: #fff;
+		margin-top: 29px;
+		padding: 18px 20px;
 
+		background: #ffffff;
+		box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
+		border-radius: 15px;
+	}
+	.btn-success {
+		padding: rem(7) rem(12);
+		color: #fff;
+		font-size: rem(14);
+		font-weight: 500;
+	}
+	@include media-breakpoint-up(sm) {
+	}
 
-	@include media-breakpoint-up(sm) {}
-	
-	@include media-breakpoint-up(xs) {}
-	// 
-	@include media-breakpoint-between(md, xl) {}
-	// 
-	@include media-breakpoint-only(xs) {}
+	@include media-breakpoint-up(xs) {
+	}
+	//
+	@include media-breakpoint-between(md, xl) {
+	}
+	//
+	@include media-breakpoint-only(xs) {
+	}
 
-	@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-down(xs) {
+	}
 }
-
-
