--- a/sourse/pug/blocks/sFAQ/_sFAQ.pug
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.pug
@@ -15,4 +15,6 @@ mixin sFAQ(data)
 					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
 				+ddGroupItem('Какие сроки проведения программы?')
 					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
+					ul: li Вы научитесь анализировать
+					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверя
 	// end sFAQ
